--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.13.2",
-    "@astrojs/check": "^0.9.2",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/vercel": "^7.8.2",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.16.10",
+    "node-postgres": "^0.6.2",
+    "pg": "^8.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.11.6"
   }
 }
