--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.4",
     "@tanstack/react-query": "^5.71.3",
+    "@tanstack/react-query-devtools": "^5.75.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
