--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.4",
+    "@tailwindcss/cli": "^4.1.6",
+    "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.71.3",
     "@tanstack/react-query-devtools": "^5.75.2",
     "@testing-library/jest-dom": "^6.6.3",
@@ -15,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "^4.1.6",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.68.0"
+    "@tanstack/eslint-plugin-query": "^5.68.0",
+    "vite": "^6.3.5"
   }
 }
